feat: Backend polish